update player name mapping

--- a/notebooks/name_mapping_check.ipynb
+++ b/notebooks/name_mapping_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,126 +71,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "conn = sqlite3.connect(\"data/fpl.db\")\n",
     "\n",
-    "intermediate_data = pd.read_sql(f\"select * from intermediate_data\", conn)\n",
-    "intermediate_data = select_relevant_rows(intermediate_data)\n",
+    "fpl_data = pd.read_sql(f\"select full_name, season, sum(total_points) from raw_fpl_data group by full_name, season\", conn)\n",
     "\n",
     "conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fpl_points</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>fpl_name</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Rúben Diogo da Silva Neves</th>\n",
-       "      <td>199.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Thiago Thiago</th>\n",
-       "      <td>92.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ricardo Domingos Barbosa Pereira</th>\n",
-       "      <td>62.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Bamidele Alli</th>\n",
-       "      <td>35.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Fabio Carvalho</th>\n",
-       "      <td>12.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rúben Gonçalo Silva Nascimento Vinagre</th>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Marcus Bettinelli</th>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Marek Rodák</th>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Nohan Kenneh</th>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                        fpl_points\n",
-       "fpl_name                                          \n",
-       "Rúben Diogo da Silva Neves                   199.0\n",
-       "Thiago Thiago                                 92.0\n",
-       "Ricardo Domingos Barbosa Pereira              62.0\n",
-       "Bamidele Alli                                 35.0\n",
-       "Fabio Carvalho                                12.0\n",
-       "Rúben Gonçalo Silva Nascimento Vinagre         1.0\n",
-       "Marcus Bettinelli                             -1.0\n",
-       "Marek Rodák                                   -1.0\n",
-       "Nohan Kenneh                                  -1.0"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "highest_points_without_match_log = (\n",
-    "    intermediate_data[\n",
-    "        intermediate_data[\"player\"].isna() & intermediate_data[\"fpl_points\"] != 0\n",
-    "    ]\n",
-    "    .groupby(\"fpl_name\")[[\"fpl_points\"]]\n",
-    "    .sum()\n",
-    "    .sort_values(\"fpl_points\", ascending=False)\n",
-    ")\n",
-    "highest_points_without_match_log"
+    "player_name_mapping = pd.read_csv(\"data/preprocess/player_mapping/player_name_mapping.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -216,121 +119,178 @@
        "      <th></th>\n",
        "      <th>fbref_name</th>\n",
        "      <th>fpl_name</th>\n",
-       "      <th>fuzzy_score</th>\n",
-       "      <th>total_points</th>\n",
-       "      <th>review</th>\n",
-       "      <th>duplicated</th>\n",
+       "      <th>season</th>\n",
+       "      <th>sum(total_points)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Carlton Morris</td>\n",
+       "      <td>2023-2024</td>\n",
+       "      <td>140.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [fbref_name, fpl_name, fuzzy_score, total_points, review, duplicated]\n",
-       "Index: []"
+       "  fbref_name        fpl_name     season  sum(total_points)\n",
+       "0        NaN  Carlton Morris  2023-2024              140.0"
       ]
      },
-     "execution_count": 85,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fbref_name</th>\n",
+       "      <th>fpl_name</th>\n",
+       "      <th>season</th>\n",
+       "      <th>sum(total_points)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Carlos Vinícius</td>\n",
+       "      <td>Carlos Vinícius Alves Morais</td>\n",
+       "      <td>2022-2023</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Carlos Vinícius</td>\n",
+       "      <td>Carlos Vinícius Alves Morais</td>\n",
+       "      <td>2023-2024</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        fbref_name                      fpl_name     season  sum(total_points)\n",
+       "0  Carlos Vinícius  Carlos Vinícius Alves Morais  2022-2023               72.0\n",
+       "1  Carlos Vinícius  Carlos Vinícius Alves Morais  2023-2024               22.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fbref_name</th>\n",
+       "      <th>fpl_name</th>\n",
+       "      <th>season</th>\n",
+       "      <th>sum(total_points)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Carlos Vinicius Alves Morais</td>\n",
+       "      <td>2020-2021</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  fbref_name                      fpl_name     season  sum(total_points)\n",
+       "0        NaN  Carlos Vinicius Alves Morais  2020-2021               13.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "player_name_mapping = pd.read_csv(\"data/preprocess/player_mapping/player_name_mapping.csv\")\n",
-    "search_for = \"Allan Nyom\"\n",
-    "player_name_mapping[player_name_mapping[\"fpl_name\"] == search_for]"
+    "search_for = \"Carlton Morris\"\n",
+    "matched = process.extract(\n",
+    "    search_for, player_name_mapping[\"fpl_name\"].tolist(), limit=10, \n",
+    ")\n",
+    "top_matches = [m for m in matched if m[1] > 60]\n",
+    "if not top_matches:\n",
+    "    top_matches = matched\n",
+    "\n",
+    "for fpl_name, score in top_matches[:3]:\n",
+    "    data = fpl_data.query(f\"full_name == '{fpl_name}'\")\n",
+    "    data = pd.merge(player_name_mapping[[\"fbref_name\", \"fpl_name\"]], data, how=\"right\", right_on=\"full_name\", left_on=\"fpl_name\").drop(\"full_name\", axis=1)\n",
+    "    display(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('Allan Marques Loureiro', 86), ('Allan Marques Loureiro', 86), ('Allan Saint-Maximin', 86), ('Allan Tchaptchet', 86), ('Allan-Roméo Nyom', 86), ('Thomas Allan', 69), ('Allan Campbell', 63), ('Allan McGregor', 63)]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[('Oscar', 68),\n",
+       " ('Sean Morrison', 67),\n",
+       " ('Ravel Morrison', 64),\n",
+       " ('Rodri', 60),\n",
+       " ('Antony', 60),\n",
+       " ('Cafú', 60),\n",
+       " ('Aaron Mooy', 58),\n",
+       " ('Ramiro Funes Mori', 58),\n",
+       " ('Alberto Moreno', 57),\n",
+       " ('James Morrison', 57)]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "matched = process.extract(\n",
-    "    search_for, player_name_mapping[\"fpl_name\"].tolist(), limit=10, \n",
+    "    \"carlton morris\", player_name_mapping[\"fbref_name\"].tolist(), limit=10, \n",
     ")\n",
-    "matched = [m for m in matched if m[1] > 60]\n",
-    "if matched:\n",
-    "    print(matched)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>season</th>\n",
-       "      <th>fbref_name</th>\n",
-       "      <th>fpl_name</th>\n",
-       "      <th>fuzzy_score</th>\n",
-       "      <th>total_points</th>\n",
-       "      <th>review</th>\n",
-       "      <th>duplicated</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4346</th>\n",
-       "      <td>2016-2017</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Matthew James</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         season fbref_name       fpl_name  fuzzy_score  total_points review  \\\n",
-       "4346  2016-2017        NaN  Matthew James          NaN           1.0   True   \n",
-       "\n",
-       "     duplicated  \n",
-       "4346        NaN  "
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "player_name_mapping.query(\"fpl_name == 'Matthew James'\")"
+    "matched"
    ]
   }
  ],
