align fpl player names

--- a/notebooks/name_mapping_check.ipynb
+++ b/notebooks/name_mapping_check.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -126,73 +126,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Carlton Morris</td>\n",
-       "      <td>2023-2024</td>\n",
-       "      <td>140.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  fbref_name        fpl_name     season  sum(total_points)\n",
-       "0        NaN  Carlton Morris  2023-2024              140.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fbref_name</th>\n",
-       "      <th>fpl_name</th>\n",
-       "      <th>season</th>\n",
-       "      <th>sum(total_points)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Carlos Vinícius</td>\n",
-       "      <td>Carlos Vinícius Alves Morais</td>\n",
-       "      <td>2022-2023</td>\n",
-       "      <td>72.0</td>\n",
+       "      <td>Danny Ward</td>\n",
+       "      <td>Danny Ward</td>\n",
+       "      <td>2017-2018</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Carlos Vinícius</td>\n",
-       "      <td>Carlos Vinícius Alves Morais</td>\n",
-       "      <td>2023-2024</td>\n",
+       "      <td>Danny Ward</td>\n",
+       "      <td>Danny Ward</td>\n",
+       "      <td>2018-2019</td>\n",
        "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Danny Ward</td>\n",
+       "      <td>Danny Ward</td>\n",
+       "      <td>2019-2020</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Danny Ward</td>\n",
+       "      <td>Danny Ward</td>\n",
+       "      <td>2020-2021</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Danny Ward</td>\n",
+       "      <td>Danny Ward</td>\n",
+       "      <td>2021-2022</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Danny Ward</td>\n",
+       "      <td>Danny Ward</td>\n",
+       "      <td>2022-2023</td>\n",
+       "      <td>91.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        fbref_name                      fpl_name     season  sum(total_points)\n",
-       "0  Carlos Vinícius  Carlos Vinícius Alves Morais  2022-2023               72.0\n",
-       "1  Carlos Vinícius  Carlos Vinícius Alves Morais  2023-2024               22.0"
+       "   fbref_name    fpl_name     season  sum(total_points)\n",
+       "0  Danny Ward  Danny Ward  2017-2018                0.0\n",
+       "1  Danny Ward  Danny Ward  2018-2019               22.0\n",
+       "2  Danny Ward  Danny Ward  2019-2020                0.0\n",
+       "3  Danny Ward  Danny Ward  2020-2021                0.0\n",
+       "4  Danny Ward  Danny Ward  2021-2022                3.0\n",
+       "5  Danny Ward  Danny Ward  2022-2023               91.0"
       ]
      },
      "metadata": {},
@@ -228,18 +213,161 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Carlos Vinicius Alves Morais</td>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>2016-2017</td>\n",
+       "      <td>92.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>2017-2018</td>\n",
+       "      <td>84.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>2018-2019</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>2019-2020</td>\n",
+       "      <td>117.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>James Ward-Prowse</td>\n",
        "      <td>2020-2021</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>156.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>2021-2022</td>\n",
+       "      <td>159.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>2022-2023</td>\n",
+       "      <td>142.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>James Ward-Prowse</td>\n",
+       "      <td>2023-2024</td>\n",
+       "      <td>136.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  fbref_name                      fpl_name     season  sum(total_points)\n",
-       "0        NaN  Carlos Vinicius Alves Morais  2020-2021               13.0"
+       "          fbref_name           fpl_name     season  sum(total_points)\n",
+       "0  James Ward-Prowse  James Ward-Prowse  2016-2017               92.0\n",
+       "1  James Ward-Prowse  James Ward-Prowse  2017-2018               84.0\n",
+       "2  James Ward-Prowse  James Ward-Prowse  2018-2019               94.0\n",
+       "3  James Ward-Prowse  James Ward-Prowse  2019-2020              117.0\n",
+       "4  James Ward-Prowse  James Ward-Prowse  2020-2021              156.0\n",
+       "5  James Ward-Prowse  James Ward-Prowse  2021-2022              159.0\n",
+       "6  James Ward-Prowse  James Ward-Prowse  2022-2023              142.0\n",
+       "7  James Ward-Prowse  James Ward-Prowse  2023-2024              136.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fbref_name</th>\n",
+       "      <th>fpl_name</th>\n",
+       "      <th>season</th>\n",
+       "      <th>sum(total_points)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Danny Rose</td>\n",
+       "      <td>Danny Rose</td>\n",
+       "      <td>2016-2017</td>\n",
+       "      <td>84.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Danny Rose</td>\n",
+       "      <td>Danny Rose</td>\n",
+       "      <td>2017-2018</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Danny Rose</td>\n",
+       "      <td>Danny Rose</td>\n",
+       "      <td>2018-2019</td>\n",
+       "      <td>86.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Danny Rose</td>\n",
+       "      <td>Danny Rose</td>\n",
+       "      <td>2019-2020</td>\n",
+       "      <td>47.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Danny Rose</td>\n",
+       "      <td>Danny Rose</td>\n",
+       "      <td>2020-2021</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Danny Rose</td>\n",
+       "      <td>Danny Rose</td>\n",
+       "      <td>2021-2022</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fbref_name    fpl_name     season  sum(total_points)\n",
+       "0  Danny Rose  Danny Rose  2016-2017               84.0\n",
+       "1  Danny Rose  Danny Rose  2017-2018               24.0\n",
+       "2  Danny Rose  Danny Rose  2018-2019               86.0\n",
+       "3  Danny Rose  Danny Rose  2019-2020               47.0\n",
+       "4  Danny Rose  Danny Rose  2020-2021                0.0\n",
+       "5  Danny Rose  Danny Rose  2021-2022                7.0"
       ]
      },
      "metadata": {},
@@ -247,7 +375,7 @@
     }
    ],
    "source": [
-    "search_for = \"Carlton Morris\"\n",
+    "search_for = \"Danny Ward\"\n",
     "matched = process.extract(\n",
     "    search_for, player_name_mapping[\"fpl_name\"].tolist(), limit=10, \n",
     ")\n",
@@ -263,35 +391,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Oscar', 68),\n",
-       " ('Sean Morrison', 67),\n",
-       " ('Ravel Morrison', 64),\n",
-       " ('Rodri', 60),\n",
-       " ('Antony', 60),\n",
-       " ('Cafú', 60),\n",
-       " ('Aaron Mooy', 58),\n",
-       " ('Ramiro Funes Mori', 58),\n",
-       " ('Alberto Moreno', 57),\n",
-       " ('James Morrison', 57)]"
+       "[('Danny Ward', 100),\n",
+       " ('Danny Drinkwater', 86),\n",
+       " ('James Ward-Prowse', 86),\n",
+       " ('Danny Rose', 70),\n",
+       " ('Danny Williams', 67),\n",
+       " ('Antony', 65),\n",
+       " ('Danny Simpson', 63),\n",
+       " ('Danny Welbeck', 63),\n",
+       " ('Danny Ings', 63),\n",
+       " ('Danilo', 60)]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "matched = process.extract(\n",
-    "    \"carlton morris\", player_name_mapping[\"fbref_name\"].tolist(), limit=10, \n",
+    "    search_for, player_name_mapping[\"fbref_name\"].tolist(), limit=10, \n",
     ")\n",
     "matched"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.connect(\"data/fpl.db\")\n",
+    "\n",
+    "fpl_data = pd.read_sql(\n",
+    "    f\"\"\"\n",
+    "    select season, team, full_name, opponent_team, opponent_team_name, fixture, was_home, total_points \n",
+    "    from raw_fpl_data\n",
+    "    \"\"\", conn\n",
+    ")\n",
+    "\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
