--- a/notebooks/name_mapping_check.ipynb
+++ b/notebooks/name_mapping_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,16 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "player_name_mapping = pd.read_csv(\"data/preprocess/player_mapping/player_name_mapping.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -126,58 +117,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Danny Ward</td>\n",
-       "      <td>Danny Ward</td>\n",
-       "      <td>2017-2018</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Danny Ward</td>\n",
-       "      <td>Danny Ward</td>\n",
-       "      <td>2018-2019</td>\n",
-       "      <td>22.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Danny Ward</td>\n",
-       "      <td>Danny Ward</td>\n",
-       "      <td>2019-2020</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Danny Ward</td>\n",
-       "      <td>Danny Ward</td>\n",
-       "      <td>2020-2021</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Danny Ward</td>\n",
-       "      <td>Danny Ward</td>\n",
-       "      <td>2021-2022</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Danny Ward</td>\n",
-       "      <td>Danny Ward</td>\n",
+       "      <td>Kaine Kesler-Hayden</td>\n",
+       "      <td>Kaine Kesler Hayden</td>\n",
        "      <td>2022-2023</td>\n",
-       "      <td>91.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   fbref_name    fpl_name     season  sum(total_points)\n",
-       "0  Danny Ward  Danny Ward  2017-2018                0.0\n",
-       "1  Danny Ward  Danny Ward  2018-2019               22.0\n",
-       "2  Danny Ward  Danny Ward  2019-2020                0.0\n",
-       "3  Danny Ward  Danny Ward  2020-2021                0.0\n",
-       "4  Danny Ward  Danny Ward  2021-2022                3.0\n",
-       "5  Danny Ward  Danny Ward  2022-2023               91.0"
+       "            fbref_name             fpl_name     season  sum(total_points)\n",
+       "0  Kaine Kesler-Hayden  Kaine Kesler Hayden  2022-2023                0.0"
       ]
      },
      "metadata": {},
@@ -213,74 +164,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>2016-2017</td>\n",
-       "      <td>92.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>2017-2018</td>\n",
-       "      <td>84.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>2018-2019</td>\n",
-       "      <td>94.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>2019-2020</td>\n",
-       "      <td>117.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>2020-2021</td>\n",
-       "      <td>156.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>2021-2022</td>\n",
-       "      <td>159.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>2022-2023</td>\n",
-       "      <td>142.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>James Ward-Prowse</td>\n",
-       "      <td>James Ward-Prowse</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kaine Kesler-Hayden</td>\n",
        "      <td>2023-2024</td>\n",
-       "      <td>136.0</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          fbref_name           fpl_name     season  sum(total_points)\n",
-       "0  James Ward-Prowse  James Ward-Prowse  2016-2017               92.0\n",
-       "1  James Ward-Prowse  James Ward-Prowse  2017-2018               84.0\n",
-       "2  James Ward-Prowse  James Ward-Prowse  2018-2019               94.0\n",
-       "3  James Ward-Prowse  James Ward-Prowse  2019-2020              117.0\n",
-       "4  James Ward-Prowse  James Ward-Prowse  2020-2021              156.0\n",
-       "5  James Ward-Prowse  James Ward-Prowse  2021-2022              159.0\n",
-       "6  James Ward-Prowse  James Ward-Prowse  2022-2023              142.0\n",
-       "7  James Ward-Prowse  James Ward-Prowse  2023-2024              136.0"
+       "  fbref_name             fpl_name     season  sum(total_points)\n",
+       "0        NaN  Kaine Kesler-Hayden  2023-2024                2.0"
       ]
      },
      "metadata": {},
@@ -316,58 +211,121 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Danny Rose</td>\n",
-       "      <td>Danny Rose</td>\n",
-       "      <td>2016-2017</td>\n",
-       "      <td>84.0</td>\n",
+       "      <td>Isaac Hayden</td>\n",
+       "      <td>Isaac Hayden</td>\n",
+       "      <td>2017-2018</td>\n",
+       "      <td>41.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Danny Rose</td>\n",
-       "      <td>Danny Rose</td>\n",
-       "      <td>2017-2018</td>\n",
-       "      <td>24.0</td>\n",
+       "      <td>Isaac Hayden</td>\n",
+       "      <td>Isaac Hayden</td>\n",
+       "      <td>2018-2019</td>\n",
+       "      <td>69.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Danny Rose</td>\n",
-       "      <td>Danny Rose</td>\n",
-       "      <td>2018-2019</td>\n",
-       "      <td>86.0</td>\n",
+       "      <td>Isaac Hayden</td>\n",
+       "      <td>Isaac Hayden</td>\n",
+       "      <td>2019-2020</td>\n",
+       "      <td>73.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Danny Rose</td>\n",
-       "      <td>Danny Rose</td>\n",
-       "      <td>2019-2020</td>\n",
-       "      <td>47.0</td>\n",
+       "      <td>Isaac Hayden</td>\n",
+       "      <td>Isaac Hayden</td>\n",
+       "      <td>2020-2021</td>\n",
+       "      <td>40.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Danny Rose</td>\n",
-       "      <td>Danny Rose</td>\n",
-       "      <td>2020-2021</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>Isaac Hayden</td>\n",
+       "      <td>Isaac Hayden</td>\n",
+       "      <td>2021-2022</td>\n",
+       "      <td>28.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Danny Rose</td>\n",
-       "      <td>Danny Rose</td>\n",
-       "      <td>2021-2022</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>Isaac Hayden</td>\n",
+       "      <td>Isaac Hayden</td>\n",
+       "      <td>2023-2024</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   fbref_name    fpl_name     season  sum(total_points)\n",
-       "0  Danny Rose  Danny Rose  2016-2017               84.0\n",
-       "1  Danny Rose  Danny Rose  2017-2018               24.0\n",
-       "2  Danny Rose  Danny Rose  2018-2019               86.0\n",
-       "3  Danny Rose  Danny Rose  2019-2020               47.0\n",
-       "4  Danny Rose  Danny Rose  2020-2021                0.0\n",
-       "5  Danny Rose  Danny Rose  2021-2022                7.0"
+       "     fbref_name      fpl_name     season  sum(total_points)\n",
+       "0  Isaac Hayden  Isaac Hayden  2017-2018               41.0\n",
+       "1  Isaac Hayden  Isaac Hayden  2018-2019               69.0\n",
+       "2  Isaac Hayden  Isaac Hayden  2019-2020               73.0\n",
+       "3  Isaac Hayden  Isaac Hayden  2020-2021               40.0\n",
+       "4  Isaac Hayden  Isaac Hayden  2021-2022               28.0\n",
+       "5  Isaac Hayden  Isaac Hayden  2023-2024                0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fbref_name</th>\n",
+       "      <th>fpl_name</th>\n",
+       "      <th>season</th>\n",
+       "      <th>sum(total_points)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kaine Hayden</td>\n",
+       "      <td>2019-2020</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kaine Hayden</td>\n",
+       "      <td>2020-2021</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Kaine Hayden</td>\n",
+       "      <td>2021-2022</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  fbref_name      fpl_name     season  sum(total_points)\n",
+       "0        NaN  Kaine Hayden  2019-2020                0.0\n",
+       "1        NaN  Kaine Hayden  2020-2021                0.0\n",
+       "2        NaN  Kaine Hayden  2021-2022                0.0"
       ]
      },
      "metadata": {},
@@ -375,7 +333,9 @@
     }
    ],
    "source": [
-    "search_for = \"Danny Ward\"\n",
+    "player_name_mapping = pd.read_csv(\"data/preprocess/player_name_mapping.csv\")\n",
+    "\n",
+    "search_for = \"Kaine Kesler-Hayden\"\n",
     "matched = process.extract(\n",
     "    search_for, player_name_mapping[\"fpl_name\"].tolist(), limit=10, \n",
     ")\n",
@@ -383,7 +343,7 @@
     "if not top_matches:\n",
     "    top_matches = matched\n",
     "\n",
-    "for fpl_name, score in top_matches[:3]:\n",
+    "for fpl_name, score in top_matches:\n",
     "    data = fpl_data.query(f\"full_name == '{fpl_name}'\")\n",
     "    data = pd.merge(player_name_mapping[[\"fbref_name\", \"fpl_name\"]], data, how=\"right\", right_on=\"full_name\", left_on=\"fpl_name\").drop(\"full_name\", axis=1)\n",
     "    display(data)"
@@ -391,25 +351,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Danny Ward', 100),\n",
-       " ('Danny Drinkwater', 86),\n",
-       " ('James Ward-Prowse', 86),\n",
-       " ('Danny Rose', 70),\n",
-       " ('Danny Williams', 67),\n",
-       " ('Antony', 65),\n",
-       " ('Danny Simpson', 63),\n",
-       " ('Danny Welbeck', 63),\n",
-       " ('Danny Ings', 63),\n",
-       " ('Danilo', 60)]"
+       "[('Diego Costa', 86),\n",
+       " ('Kevin De Bruyne', 86),\n",
+       " ('David de Gea', 86),\n",
+       " ('Marten de Roon', 86),\n",
+       " ('Hélder Costa', 86),\n",
+       " ('Donny van de Beek', 86),\n",
+       " ('Micky van de Ven', 86),\n",
+       " ('Ederson', 64),\n",
+       " ('Eric Dier', 60),\n",
+       " ('Oscar', 60)]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,36 +383,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fbref_id</th>\n",
+       "      <th>fbref_name</th>\n",
+       "      <th>fpl_name</th>\n",
+       "      <th>fuzzy_score</th>\n",
+       "      <th>total_points</th>\n",
+       "      <th>review</th>\n",
+       "      <th>duplicated</th>\n",
+       "      <th>missing_matchlogs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>596</th>\n",
+       "      <td>ca2bc3df</td>\n",
+       "      <td>José Izquierdo</td>\n",
+       "      <td>José Heriberto Izquierdo Mena</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     fbref_id      fbref_name                       fpl_name  fuzzy_score  \\\n",
+       "596  ca2bc3df  José Izquierdo  José Heriberto Izquierdo Mena        100.0   \n",
+       "\n",
+       "     total_points  review  duplicated  missing_matchlogs  \n",
+       "596           NaN     NaN         NaN                NaN  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "conn = sqlite3.connect(\"data/fpl.db\")\n",
-    "\n",
-    "fpl_data = pd.read_sql(\n",
-    "    f\"\"\"\n",
-    "    select season, team, full_name, opponent_team, opponent_team_name, fixture, was_home, total_points \n",
-    "    from raw_fpl_data\n",
-    "    \"\"\", conn\n",
-    ")\n",
-    "\n",
-    "conn.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
+    "player_name_mapping.query(\"fbref_name == 'José Izquierdo'\")"
    ]
   },
   {
