add chips suggestions

--- a/notebooks/debug_lp.ipynb
+++ b/notebooks/debug_lp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,52 +14,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LpData(merged_data=      id     web_name                 full_name             team  \\\n",
-       "363  328      M.Salah             Mohamed Salah        Liverpool   \n",
-       "385  351      Haaland            Erling Haaland  Manchester City   \n",
-       "16    17         Saka               Bukayo Saka          Arsenal   \n",
-       "211  199          Eze              Eberechi Eze   Crystal Palace   \n",
-       "3      4      Havertz               Kai Havertz          Arsenal   \n",
-       "..   ...          ...                       ...              ...   \n",
-       "252  582      O'Brien              Jake O'Brien          Everton   \n",
-       "251  577    Lindstrøm          Jesper Lindstrøm          Everton   \n",
-       "249  237  Y. Chermiti  Youssef Ramalho Chermiti          Everton   \n",
-       "246  234    Patterson          Nathan Patterson          Everton   \n",
-       "313  611     Szmodics              Sam Szmodics     Ipswich Town   \n",
+       "LpData(merged_data=         web_name              full_name            team  element_type  \\\n",
+       "1    Fábio Vieira  Fábio Ferreira Vieira         Arsenal             3   \n",
+       "382         Mount            Mason Mount  Manchester Utd             3   \n",
+       "375       Højlund         Rasmus Højlund  Manchester Utd             4   \n",
+       "376      Lindelof        Victor Lindelöf  Manchester Utd             2   \n",
+       "377       Maguire          Harry Maguire  Manchester Utd             2   \n",
+       "..            ...                    ...             ...           ...   \n",
+       "197       Ebiowei        Malcolm Ebiowei  Crystal Palace             3   \n",
+       "198       Edouard        Odsonne Edouard  Crystal Palace             4   \n",
+       "199           Eze           Eberechi Eze  Crystal Palace             3   \n",
+       "200         Guéhi             Marc Guéhi  Crystal Palace             2   \n",
+       "567          Toti     Toti António Gomes          Wolves             2   \n",
        "\n",
-       "     element_type position  now_cost  chance_of_playing_next_round  \\\n",
-       "363             3      MID       126                           NaN   \n",
-       "385             4      FWD       151                           NaN   \n",
-       "16              3      MID       100                           NaN   \n",
-       "211             3      MID        70                           NaN   \n",
-       "3               4      FWD        81                           NaN   \n",
-       "..            ...      ...       ...                           ...   \n",
-       "252             2      DEF        49                           NaN   \n",
-       "251             3      MID        54                           NaN   \n",
-       "249             4      FWD        50                           0.0   \n",
-       "246             2      DEF        44                           0.0   \n",
-       "313             3      MID        60                           NaN   \n",
+       "    position  now_cost  chance_of_playing_next_round fpl_name  pred_pts_3  \\\n",
+       "1        MID        54                           0.0     None         0.0   \n",
+       "382      MID        65                           0.0     None         0.0   \n",
+       "375      FWD        69                           0.0     None         0.0   \n",
+       "376      DEF        44                           0.0     None         0.0   \n",
+       "377      DEF        50                           0.0     None         0.0   \n",
+       "..       ...       ...                           ...      ...         ...   \n",
+       "197      MID        45                           0.0     None         0.0   \n",
+       "198      FWD        55                           0.0     None         0.0   \n",
+       "199      MID        70                           0.0     None         0.0   \n",
+       "200      DEF        45                           0.0     None         0.0   \n",
+       "567      DEF        45                           0.0     None         0.0   \n",
        "\n",
-       "     pred_pts_3  pred_pts_4  pred_pts_5  sell_price   total_ev  \n",
-       "363    5.843936    6.475607    7.425906         126  19.745449  \n",
-       "385    6.423157    6.774322    5.091171         151  18.288651  \n",
-       "16     6.038822    4.718588    5.008791         100  15.766201  \n",
-       "211    4.089279    5.570343    5.469142          70  15.128765  \n",
-       "3      5.273040    4.779338    4.706966          81  14.759344  \n",
-       "..          ...         ...         ...         ...        ...  \n",
-       "252    0.000000    0.000000    0.000000          49   0.000000  \n",
-       "251    0.000000    0.000000    0.000000          54   0.000000  \n",
-       "249    0.000000    0.000000    0.000000          50   0.000000  \n",
-       "246    0.000000    0.000000    0.000000          44   0.000000  \n",
-       "313    0.000000    0.000000    0.000000          60   0.000000  \n",
+       "     pred_pts_4  pred_pts_5  sell_price  total_ev  \n",
+       "1           0.0         0.0          54       0.0  \n",
+       "382         0.0         0.0          65       0.0  \n",
+       "375         0.0         0.0          69       0.0  \n",
+       "376         0.0         0.0          44       0.0  \n",
+       "377         0.0         0.0          50       0.0  \n",
+       "..          ...         ...         ...       ...  \n",
+       "197         0.0         0.0          45       0.0  \n",
+       "198         0.0         0.0          55       0.0  \n",
+       "199         0.0         0.0          70       0.0  \n",
+       "200         0.0         0.0          45       0.0  \n",
+       "567         0.0         0.0          45       0.0  \n",
        "\n",
-       "[627 rows x 13 columns], team_data=    code  draw  form  loss            name  played  points  position  \\\n",
+       "[633 rows x 13 columns], team_data=    code  draw  form  loss            name  played  points  position  \\\n",
        "1      3     0  None     0         Arsenal       0       0         0   \n",
        "2      7     0  None     0     Aston Villa       0       0         0   \n",
        "3     91     0  None     0     Bournemouth       0       0         0   \n",
@@ -181,12 +181,12 @@
        "\n",
        "   squad_max_play  ui_shirt_specific sub_positions_locked  element_count  \n",
        "1               1               True                 [12]             67  \n",
-       "2               5              False                   []            205  \n",
-       "3               5              False                   []            283  \n",
-       "4               3              False                   []             72  , gameweeks=[3, 4, 5], initial_squad=[554, 335, 211, 350, 348, 13, 328, 199, 4, 207, 401, 414, 333, 408, 103], team_name=\"It's Coming Home\", in_the_bank=0.0, free_transfers=1, current_season='2024-2025', chips_usage={'wildcard1': None, 'wildcard2': None, 'free_hit': None, 'triple_captain': None, 'bench_boost': None})"
+       "2               5              False                   []            207  \n",
+       "3               5              False                   []            287  \n",
+       "4               3              False                   []             72  , gameweeks=[3, 4, 5], initial_squad=[554, 335, 211, 350, 348, 13, 328, 199, 4, 207, 401, 414, 333, 408, 103], team_name=\"It's Coming Home\", in_the_bank=0.0, free_transfers=1, current_season='2024-2025', chips_usage={})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,22 +199,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[554, 335, 211, 350, 348, 13, 328, 199, 4, 207, 401, 414, 333, 408, 103]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "Int64Index: 633 entries, 1 to 567\n",
+      "Series name: sell_price\n",
+      "Non-Null Count  Dtype\n",
+      "--------------  -----\n",
+      "633 non-null    int64\n",
+      "dtypes: int64(1)\n",
+      "memory usage: 9.9 KB\n"
+     ]
     }
    ],
    "source": [
-    "lp_data.initial_squad"
+    "lp_data.merged_data.sell_price.info()"
    ]
   },
   {
